I think i am done here

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header>
-
+    <h1 class="display-5 text-center mt-5 mb-0 fw-bold text-white">Desire Store </h1>
   </header>
 
   <main class="main">
